# rd_sharma_question_extractor.O

./: .gitignore  DELIVERABLES_VERIFICATION.md  Dockerfile  FINAL_STRUCTURE_VERIFICATION.md  README.md  STRUCTURE_COMPARISON.md  environment.yml  pyproject.toml  requirements.txt  setup.py  simple_test.py
data/: document_index.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  TECHNICAL_REPORT.md  TROUBLESHOOTING.md
docs/images/: .gitkeep
notebooks/: analysis.ipynb  demo.ipynb  notebook_setup.py  prompt_testing.ipynb  visualization.ipynb
outputs/: chapter_21_21_1.json  chapter_21_21_1.latex  chapter_30_30_3.latex
scripts/: benchmark_models.py  build_index.py  export_deliverables.py  install_notebook_deps.py  setup_environment.py  setup_notebooks.py  test_ocr_quality.py
src/: __init__.py  config.py  main.py
src/document_processor/: __init__.py  content_parser.py  document_indexer.py  ocr_processor.py  pdf_handler.py
src/llm_interface/: __init__.py  fallback_handler.py  groq_client.py  prompt_templates.py  response_parser.py
src/question_extractor/: __init__.py  detector.py  latex_converter.py  validator.py
src/rag_pipeline/: __init__.py  chunker.py  embeddings.py  retriever.py  vector_store.py
src/utils/: __init__.py  exceptions.py  file_handler.py  latex_renderer.py  logger.py
tests/: __init__.py  test_document_processor.py  test_llm_interface.py  test_question_extractor.py  test_rag_pipeline.py
tests/fixtures/: expected_questions.json  test_prompts.json
